<resources>
    <string name="app_name">Mangala Muhurtham</string>
    <string name="login">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back To Login</string>
    <string name="first_name">First Name</string>
    <string name="mobile">Mobile</string>
    <string name="on_behalf">On Behalf</string>
    <string name="registration">REGISTRATION</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>